# Islang

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  makefile
.spec/: Islangpp  spec.ebnf
examples/: colors.isl  example.isl  fruits.isl  stuff.isl
src/: AST.cpp  AST.h  CLI.cpp  CLI.h  Character.cpp  Character.h  Color.cpp  Color.h  Compat.cpp  Compat.h  Grammar.cpp  Grammar.h  Interpreter.cpp  Interpreter.h  InterpreterError.cpp  InterpreterError.h  InterpreterException.cpp  InterpreterException.h  IslangException.cpp  IslangException.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  ParserError.cpp  ParserError.h  ParserException.cpp  ParserException.h  ParserPromise.cpp  ParserPromise.h  Scanner.cpp  Scanner.h  Scope.cpp  Scope.h  Token.cpp  Token.h  TokenException.cpp  TokenException.h  Variable.cpp  Variable.h  (+1 more)
